[gd_scene load_steps=3 format=3 uid="uid://7vljt807aqsj"]

[ext_resource type="Texture2D" uid="uid://bus77gjnm5x8l" path="res://Art/Status Icons.png" id="1_4k4e5"]
[ext_resource type="Script" path="res://status_icon.gd" id="1_na60d"]

[node name="StatusIcon" type="PanelContainer"]
theme_type_variation = &"ClearPanelContainer"
script = ExtResource("1_na60d")
image = ExtResource("1_4k4e5")
flash_on_ping = true

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_4k4e5")

[node name="StatusPercent" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 7.0
theme_type_variation = &"StatusBar"
value = 100.0
fill_mode = 3
show_percentage = false

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
